# meteoio

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  Makefile.in  Readme.txt  autogen.sh  configure  configure.ac  meteoio.lsm
meteoio/: A3DIO.cc  A3DIO.h  Array.h  Array1D.h  Array2D.h  Array3D.h  Array4D.h  BufferedIOHandler.cc  BufferedIOHandler.h  CMakeLists.txt  Config.cc  Config.h  ConfigReader.cc  ConfigReader.h  Coords.cc  Coords.h  DEMObject.cc  DEMObject.h  DataCreator.cc  DataCreator.h  DataEditing.cc  DataEditing.h  DataEditingAlgorithms.cc  DataEditingAlgorithms.h  DataGenerator.cc  DataGenerator.h  Date.cc  Date.h  DynamicLibrary.cc  DynamicLibrary.h  FStream.cc  FStream.h  FileUtils.cc  FileUtils.h  FilesUtils.cc  FilesUtils.h  FilterAlgorithms.cc  FilterAlgorithms.h  FilterBlock.cc  FilterBlock.h  (+86 more)
meteoio/dataClasses/: Array1D.h  Array2D.h  Array3D.h  Array4D.h  Buffer.cc  Buffer.h  CMakeLists.txt  Coords.cc  Coords.h  CoordsAlgorithms.cc  CoordsAlgorithms.h  DEMAlgorithms.cc  DEMAlgorithms.h  DEMObject.cc  DEMObject.h  Date.cc  Date.h  Grid2DObject.cc  Grid2DObject.h  Grid3DObject.cc  Grid3DObject.h  Matrix.cc  Matrix.h  MeteoData.cc  MeteoData.h  StationData.cc  StationData.h
meteoio/dataGenerators/: AllSkyLWGenerator.cc  AllSkyLWGenerator.h  AllSkySWGenerator.cc  AllSkySWGenerator.h  CMakeLists.txt  ClearSkyLWGenerator.cc  ClearSkyLWGenerator.h  ClearSkySWGenerator.cc  ClearSkySWGenerator.h  ConstGenerator.cc  ConstGenerator.h  ESOLIPGenerator.cc  ESOLIPGenerator.h  GeneratorAlgorithms.cc  GeneratorAlgorithms.h  HumidityGenerator.cc  HumidityGenerator.h  IswrAlbedoGenerator.cc  IswrAlbedoGenerator.h  PPHASEGenerator.cc  PPHASEGenerator.h  PSUMGenerator.cc  PSUMGenerator.h  PrecSplitting.cc  PrecSplitting.h  PrecUnsplit.cc  PrecUnsplit.h  RadiationComponents.cc  RadiationComponents.h  RelHumGenerator.cc  RelHumGenerator.h  SinGenerator.cc  SinGenerator.h  StdPressGenerator.cc  StdPressGenerator.h  TauCLDGenerator.cc  TauCLDGenerator.h  TsGenerator.cc  TsGenerator.h  WindComponents.cc  (+3 more)
meteoio/gridResampling/: CMakeLists.txt  GridLinearResampling.cc  GridLinearResampling.h  GridResamplingAlgorithms.cc  GridResamplingAlgorithms.h  GridTimeseriesResampling.cc  GridTimeseriesResampling.h
meteoio/jnative/: DEMLoader.cc  DEMLoader.h  Makefile  ch_slf_gin_jnative_MeteoIOJNIInterface.cc  jnative.cc  jnative.h  synchronized.h
meteoio/meteoFilters/: CMakeLists.txt  FilterDeGrass.cc  FilterDeGrass.h  FilterDespikingPS.cc  FilterDespikingPS.h  FilterFlatline.cc  FilterFlatline.h  FilterKalman.cc  FilterKalman.h  FilterMAD.cc  FilterMAD.h  FilterMaths.cc  FilterMaths.h  FilterMax.cc  FilterMax.h  FilterMin.cc  FilterMin.h  FilterMinMax.cc  FilterMinMax.h  FilterMinMaxConditional.cc  FilterNoChange.cc  FilterNoChange.h  FilterOffsetsnowdepth.cc  FilterOffsetsnowdepth.h  FilterParticle.cc  FilterParticle.h  FilterPotentialSW.cc  FilterPotentialSW.h  FilterRate.cc  FilterRate.h  FilterSnowNosnow.cc  FilterSnowNosnow.h  FilterStdDev.cc  FilterStdDev.h  FilterSuppr.cc  FilterSuppr.h  FilterTimeconsistency.cc  FilterTimeconsistency.h  FilterTukey.cc  FilterTukey.h  (+52 more)
meteoio/meteoLaws/: Atmosphere.cc  Atmosphere.h  Meteoconst.h  Sun.cc  Sun.h  Suntrajectory.cc  Suntrajectory.h
meteoio/meteoResampling/: ARIMAResampling.cc  ARIMAResampling.h  ARIMAutils.cc  ARIMAutils.h  Accumulate.cc  CMakeLists.txt  DailyAverageResampling.cc  DailySolarResampling.cc  InterpolARIMA.cc  InterpolARIMA.h  InterpolCache.cc  LinearResampling.cc  NearestNeighbour.cc  NoResampling.cc  RegressionFill.cc  RegressionFill.h  ResamplingAlgorithms.cc  ResamplingAlgorithms.h  SolarResampling.cc  SolarResampling.h  template.cc
meteoio/meteoStats/: RandomNumberGenerator.cc  RandomNumberGenerator.h  libfit1D.cc  libfit1D.h  libfit1DCore.cc  libfit1DCore.h  libinterpol1D.cc  libinterpol1D.h  libinterpol2D.cc  libinterpol2D.h
meteoio/meteofilters/: CMakeLists.txt  FilterBlock.cc  FilterBlock.h  FilterHNWMelt.cc  FilterHNWMelt.h  FilterMAD.cc  FilterMAD.h  FilterMax.cc  FilterMax.h  FilterMeanAvg.cc  FilterMeanAvg.h  FilterMedianAvg.cc  FilterMedianAvg.h  FilterMin.cc  FilterMin.h  FilterMinMax.cc  FilterMinMax.h  FilterPassiveT.cc  FilterPassiveT.h  FilterRate.cc  FilterRate.h  FilterStdDev.cc  FilterStdDev.h  FilterSuppr.cc  FilterSuppr.h  FilterTukey.cc  FilterTukey.h  FilterUnheatedHNW.cc  FilterUnheatedHNW.h  FilterWindAvg.cc  FilterWindAvg.h  ProcAdd.cc  ProcAdd.h  ProcButterworth.cc  ProcButterworth.h  ProcExpSmoothing.cc  ProcExpSmoothing.h  ProcMult.cc  ProcMult.h  ProcPassiveT.cc  (+23 more)
meteoio/meteolaws/: Atmosphere.cc  Atmosphere.h  CMakeLists.txt  Meteoconst.h  Sun.cc  Sun.h  Suntrajectory.cc  Suntrajectory.h
meteoio/meteostats/: CMakeLists.txt  libfit1D.cc  libfit1D.h  libfit1DCore.cc  libfit1DCore.h  libinterpol1D.cc  libinterpol1D.h  libinterpol2D.cc  libinterpol2D.h
meteoio/plugins/: A3DIO.cc  A3DIO.h  ALPUG.cc  ALPUG.h  ARCIO.cc  ARCIO.h  ARPSIO.cc  ARPSIO.h  Argos.cc  Argos.h  BUFRFile.cc  BUFRFile.h  BUFRIO.cc  BUFRIO.h  BormaIO.cc  BormaIO.h  CMakeLists.txt  CNRMIO.cc  CNRMIO.h  CosmoXMLIO.cc  CosmoXMLIO.h  CsvIO.cc  CsvIO.h  CsvParams.cc  CsvParams.h  DBO.cc  DBO.h  ECSVHelper.cc  ECSVHelper.h  ECSVIO.cc  ECSVIO.h  GRIBFile.cc  GRIBFile.h  GRIBIO.cc  GRIBIO.h  GRIBIO_redesign.cc  GRIBIO_redesign.h  GRIBIO_rework.cc  GRIBIO_rework.h  GSNIO.cc  (+66 more)
meteoio/spatialInterpolations/: ALSScaleAlgorithm.cc  ALSScaleAlgorithm.h  (+45 more)
src/: A3DIO.cc  A3DIO.h  A3DIO.ph  ASCIIFileIO.cc  ASCIIFileIO.h  Array.h  Array2D.h  Array3D.h  BoschungIO.cc  BoschungIO.h  BufferedIOHandler.cc  BufferedIOHandler.h  CMakeLists.txt  ConfigReader.cc  ConfigReader.h  Coords.cc  Coords.h  DEMObject.cc  DEMObject.h  Date.cc  Date.h  Date_IO.cc  Date_IO.h  DynamicLibrary.cc  DynamicLibrary.h  FilterAlgorithms.cc  FilterAlgorithms.h  FilterProperties.h  Grid2DObject.cc  Grid2DObject.h  Grid3DObject.cc  Grid3DObject.h  IOExceptions.cc  IOExceptions.h  IOHandler.cc  IOHandler.h  IOHandler.ph  IOInterface.cc  IOInterface.h  IOPlugin.h  (+40 more)
tests/: CMakeLists.txt  io.ini  startScript.sh  startScriptValgrind.cmake
(+233 files in other folders)
